# 3DES

./: .gitignore  .test.cpp.swp  .ycm_extra_conf.py  CMakeLists.txt  README.md  main.cpp  test.cpp
caffemodel/: .cifar10_quick_train_test.prototxt.swp  cifar10_quick_iter_4000.caffemodel  cifar10_quick_train_test.prototxt
include/: mCaffeHeader.hpp  mCaffePredictor.hpp  mCamera.h  mDefs.h  mFittingUtils.hpp  mMeshRender.h  mShader.h  mTimeCount.hpp  oneEuro.hpp  vnectJointsInfo.hpp  vnectUtils.hpp
model/: cylinder.ply  cylinder2.ply  sphere.ply  sphere2.ply
shader/: f.shader  f2.shader  v.shader  v2.shader
src/utils/: CMakeLists.txt  mCaffePredictor.cpp  mCamera.cpp  mFittingUtils.cpp  mMeshRender.cpp  mShader.cpp
src/vnect/: CMakeLists.txt  mFittingUtils.cpp  vnectUtils.cpp
